# agent-artifacts

./: .gitignore  DESIGN-agents.md  DESIGN-compatibility.md  DESIGN-frictionless-adoption.md  DESIGN-memory.md  DESIGN-upstream-github-hosts.md  DESIGN-upstream.md  DESIGN.md  Makefile  PLAN-agents.md  PLAN-compatibility.md  PLAN-frictionless-adoption.md  PLAN-memory.md  PLAN-tui-profile-flow.md  PLAN-upstream-github-hosts.md  PLAN-upstream-import.md  PLAN-upstream.md  PLAN.md  README.md  pyproject.toml
.agents/skills/code-review/: SKILL.md
.github/workflows/: release.yml  validate.yml
agent_artifacts/: __init__.py  __main__.py  _commit.py  catalog.py  cli.py  cli_rules.py  compatibility.py  executor.py  fp.py  github_source.py  hashing.py  import_candidates.py  import_manifest.py  import_planner.py  import_scanner.py  manifest.py  merge.py  model.py  planners.py  policy.py  source.py  tui.py  upstream_planner.py  upstream_source.py  upstreams.py
agent_artifacts/commands/: __init__.py  _common.py  check.py  install.py  list.py  status.py  uninstall.py  update.py  upgrade.py  upstream.py
agent_artifacts/io/: __init__.py  cache.py  fs.py  net.py
agent_artifacts/profiles/: __init__.py  builtin.py  loader.py
bundles/: backend.json  base.json
docs/design/: DESIGN-compatibility.md  DESIGN-frictionless-adoption.md  DESIGN-memory.md  DESIGN-symlink-install.md  DESIGN-tui-profile-flow.md  DESIGN-upstream-import.md
docs/plan/: PLAN-compatibility.md  PLAN-frictionless-adoption.md  PLAN-memory.md  PLAN-symlink-install.md  PLAN-tui-profile-flow.md  PLAN-upstream-github-hosts.md  PLAN-upstream-import.md  PLAN-upstream.md  PLAN.md
guidelines/: python-style.md
hooks/block-secrets/: hook.json
hooks/block-secrets/scripts/: guard.py
mcp/: postgres.json  tabnine-postgres.json
memory/: house.md  superpowers.md
scripts/: build_wheel.py  bump_version.py  inject_commit.py
skills/agent-artifacts/: SKILL.md
tests/: agents_catalog_test.py  agents_cli_test.py  agents_commands_test.py  agents_planner_test.py  agents_profiles_test.py  catalog_test.py  check_test.py  cli_rules_test.py  cli_test.py  compatibility_catalog_test.py  compatibility_install_test.py  compatibility_list_test.py  compatibility_test.py  compatibility_update_test.py  content_test.py  e2e_test.py  e2e_test.sh  executor_test.py  fs_test.py  github_url_test.py  import_manifest_test.py  import_planner_test.py  import_scanner_test.py  install_test.py  list_test.py  manifest_test.py  memory_catalog_test.py  memory_cli_test.py  memory_commands_test.py  memory_planner_test.py  memory_profiles_test.py  merge_test.py  net_test.py  packaging_test.py  planners_test.py  policy_test.py  profiles_test.py  smoke_test.py  source_test.py  status_test.py  (+18 more)
tests/fixtures/bundles/: backend.json  base.json
tests/fixtures/guidelines/: python-style.md
tests/fixtures/hooks/block-secrets/: hook.json
tests/fixtures/hooks/block-secrets/scripts/: guard.py
tests/fixtures/mcp/: postgres.json  tabnine-postgres.json
tests/fixtures/memory/: house.md
tests/fixtures/skills/code-review/: SKILL.md
tests/fixtures/upstreams/catalog/: upstreams.json
tests/fixtures/upstreams/catalog/bundles/: backend.json
tests/fixtures/upstreams/catalog/memory/: house.md
tests/fixtures/upstreams/remote/: README.md
(+3 files in other folders)
